Fixed Media Query Issues

--- a/home.html
+++ b/home.html
@@ -112,7 +112,7 @@
                  style="padding-left: 5px; 
                         padding-right: 5px;">
                 <span style="font-size: small; 
-                             color: rgba(240, 248, 255, 0.749); 
+                             color: rgba(246, 246, 246, 0.749); 
                              margin-top: 5px;
                              text-shadow: black;">
                              Tap on the box to read better!
@@ -143,7 +143,7 @@
         <div class="card" 
             style="height: 300px; 
                     width: 100%;
-                    z-index: -1;
+                    z-index: 1;
                     animation: crashRight 3s ease-in calc(var(--typewriterSpeed) + 1.1s) forwards;
                     animation-iteration-count: initial;
                     transform: translateX(120%);">
@@ -290,14 +290,14 @@
           </h1>        
         <h3 style="color: black;">
             <img id="ryePic" src="https://ryecode.github.io/portfolio/ImageBank/RyePicTech.png">
-          <p class="aboutMe"
+          <p class="aboutRye"
             style=" margin-left: 70px ;
             margin-right: 20px;
-            font-weight: 900;
-            color: black;
+            font-weight: 800;
+            color: rgb(255, 255, 255);
             text-shadow: 
-            0 0 0.5em hsl(45, 100%, 53%),
-            0 0 2em hsl(45, 100%, 53%);
+            0 0 0.11em hsl(45, 100%, 53%),
+            0 0 1em black;
             opacity: 1;
             width: 85%;">
                 Greetings I'am Ryan Corral, a former call-center agent, now turned to a Full-Stack Web Developer after recently graduating from KodeGo Full-Stack Web Development Bootcamp.  
