Added certs, carousel button, Adjusted css

--- a/home.html
+++ b/home.html
@@ -258,9 +258,9 @@
                       height: 200px;">
                 </div>
               </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev" >
+                <span class="carousel-control-prev-icon" aria-hidden="true" ></span>
+                <span class="visually-hidden" >Previous</span>
               </button>
               <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -793,7 +793,8 @@
 </div>
                                          <!-- FOOTER -->
 <footer  id="footer">
-  <div class="copyright"> &#8592 © Ryan Corral 2023 	&#8594</div>
+  <div class="copyright">
+    <img src="https://ryecode.github.io/portfolio/ImageBank/RYELogoV2.png" width="10%">  © Ryan Corral 2023 	</div>
   <div class="row row-cols-2 row-cols-md-3 g-4" style="display: flex; align-items: start; justify-content: space-between;">
     <div class="attribute"> 
     Background images: <br><a href="http://www.pngtree.com" target="_blank">pngtree.com</a> & <a href="https://www.vecteezy.com/" target="_blank">vecteezy.com</a>
