Improved Profile readability

--- a/home.html
+++ b/home.html
@@ -294,13 +294,15 @@
             style=" margin-left: 70px ;
             margin-right: 20px;
             font-weight: 600;
+            font-size: large;
             color: rgb(255, 255, 255);
             text-shadow: 
-            0 0 0.11em hsl(45, 100%, 53%),
-            0 0 1em black;
+            0 0 0.08em hsl(0, 0%, 4%),
+            0 0 0.25em rgb(6, 6, 6);
             opacity: 1;
-            width: 85%;">
-                Greetings I'am Ryan Corral, a former call-center agent, now turned to a Full-Stack Web Developer after recently graduating from KodeGo Full-Stack Web Development Bootcamp, and I was awarded "<a href="https://youtu.be/Hq0qzBNZzQA" target="_blank" style="color: rgb(7, 248, 27); z-index: 1;">Best in Coding</a>".  
+            width: 85%;
+            backdrop-filter: blur(20px);">
+                Greetings I'am Ryan Corral, a former call-center agent, now turned to a Full-Stack Web Developer after recently graduating from KodeGo Full-Stack Web Development Bootcamp, and I was awarded "<a href="https://youtu.be/Hq0qzBNZzQA" target="_blank" style="color: hsl(45, 100%, 53%); z-index: 1;">Best in Coding</a>".  
               <br><br>
               Even since high school, I noticed that I can pick-up technology very quickly and I'm very comfortable jumping into different platforms and various code bases. The very first program I coded was using Turbo Pascal (from Jurassic period haha!). Back then, learning to code using only google to search forums and tutorials was very tiring for many, but for me it was so much fun, and fullfilling!
               <br><br>
