adjusted contents and styling

--- a/home.html
+++ b/home.html
@@ -169,7 +169,7 @@
                      id="picQuery"
                      style="width: 50%;
                             height: 50%;">
-                  <img src="https://ryecode.github.io/portfolio/ImageBank/RyePicTech.png" 
+                  <img src="https://ryecode.github.io/portfolio/ImageBank/resumeSS.jpeg" 
                       class="d-block w-100" 
                       alt="..."                         
                       style="margin-left: 170px;
@@ -275,7 +275,7 @@
       <div class="cardProfile card" 
            id="aboutMe"
            style="position: relative;     
-           margin: 25px 0px 250px 0px;
+           margin: 250px 0px 250px 0px;
            padding: 0;
            background-image: url('https://ryecode.github.io/portfolio/ImageBank/galaxyBG.png');
            background-size: cover;
@@ -289,10 +289,11 @@
             MY PROFILE...  
           </h1>        
         <h3 style="color: black; z-index: 1;">
-            <img id="ryePic" src="https://ryecode.github.io/portfolio/ImageBank/RyePicTech.png">
+            <img id="ryePic" src="https://ryecode.github.io/portfolio/ImageBank/RyeFormal3.png">
           <p class="aboutRye"
-            style=" margin-left: 70px ;
+            style=" margin-left: 60px ;
             margin-right: 20px;
+            padding: 20px;
             font-weight: 600;
             font-size: large;
             color: rgb(255, 255, 255);
@@ -300,13 +301,13 @@
             0 0 0.08em hsl(0, 0%, 4%),
             0 0 0.25em rgb(6, 6, 6);
             opacity: 1;
-            width: 85%;
+            width: 90%;
             backdrop-filter: blur(20px);">
-                Greetings I'am Ryan Corral, a former call-center agent, now turned to a Full-Stack Web Developer after recently graduating from KodeGo Full-Stack Web Development Bootcamp, and I was awarded "<a href="https://youtu.be/Hq0qzBNZzQA" target="_blank" style="color: hsl(45, 100%, 53%); z-index: 1;">Best in Coding</a>".  
-              <br><br>
-              Even since high school, I noticed that I can pick-up technology very quickly and I'm very comfortable jumping into different platforms and various code bases. The very first program I coded was using Turbo Pascal (from Jurassic period haha!). Back then, learning to code using only google to search forums and tutorials was very tiring for many, but for me it was so much fun, and fullfilling!
-              <br><br>
-                Now my coding prowess was somewhat updated with the latest programming languages after the bootcamp. I'am hoping, I can get a chance to work for a good IT company where I can showcase my skills and love for coding. Also get a chance to expand my knowledge and learn more about programming.                
+                Greetings I'am Ryan Corral, a former call-center agent, now turned to a Full-Stack Web Developer after recently graduating from KodeGo Full-Stack Web Development Bootcamp, and I was awarded <br>"<a href="https://youtu.be/Hq0qzBNZzQA" target="_blank" style="color: hsl(45, 100%, 53%); z-index: 1;">Best in Coding</a>".  
+                <br><br>
+                Even since high school, I noticed that I can pick-up technology very quickly. I'm very comfortable learning and understanding computers. The first program I coded was using Turbo Pascal (from Jurassic period). Back then, learning to code was hard and very tiring for my classmates, but for me it was so much fun, and fullfilling!
+                <br><br>
+                Now that my coding prowess was somewhat updated with the latest programming languages after the bootcamp. I'm hoping, I can get a chance to work for a good IT company where I can showcase my skills and passion for coding. And also expand my knowledge about programming.                
           </p>
         </h3>
         </div>
