css adjustments and updated elements

--- a/home.html
+++ b/home.html
@@ -123,8 +123,10 @@
             </div>
           </div>
           <div class="sub">        
-            <a href="#aboutMe" class="neon-button2 btn btn-primary" id="moreBtn">
-              KNOW MORE ABOUT ME
+            <a href="#aboutMe"
+               class="neon-button2 btn btn-primary" 
+               id="moreBtn">
+               KNOW MORE ABOUT ME
             </a>       
           </div>
         </div>
@@ -291,9 +293,9 @@
         <h3 style="color: black; z-index: 1;">
             <img id="ryePic" src="https://ryecode.github.io/portfolio/ImageBank/RyeFormal3.png">
           <p class="aboutRye"
-            style=" margin-left: 60px ;
+            style=" margin-left: 20px ;
             margin-right: 20px;
-            padding: 20px;
+            padding: 50px;
             font-weight: 600;
             font-size: large;
             color: rgb(255, 255, 255);
@@ -301,7 +303,7 @@
             0 0 0.08em hsl(0, 0%, 4%),
             0 0 0.25em rgb(6, 6, 6);
             opacity: 1;
-            width: 90%;
+            width: 97.3%;
             backdrop-filter: blur(20px);">
                 Greetings I'am Ryan Corral, a former call-center agent, now turned to a Full-Stack Web Developer after recently graduating from KodeGo Full-Stack Web Development Bootcamp, and I was awarded <br>"<a href="https://youtu.be/Hq0qzBNZzQA" target="_blank" style="color: hsl(45, 100%, 53%); z-index: 1;">Best in Coding</a>".  
                 <br><br>
@@ -315,7 +317,7 @@
           <!-- ACCORDION -->
           <section class="" style="width: 90%;
                           margin-left: 5%;
-                          margin-bottom: 20px;">
+                          margin-bottom: 50px;">
             <div class="accordion accordion-flush" 
                  id="accordionFlushExample" 
                  style="color: black; 
@@ -488,7 +490,7 @@
                             <div class="col-sm-6" style="width: 100%;">
                               <div class="certificate">
                                 <div class="card-body">
-                                  <h5 class="card-title">TelePerformance AT&T Mobility Technical Support Training</h5>
+                                  <h5 class="card-title">TelePerformance AT&T Unified Technical Care for Uverse and DirecTV Training</h5>
                                   <p class="card-text"> 
                                     <img class="cardContainer" src="https://ryecode.github.io/portfolio/ImageBank/ryeTP1.jpg" alt="Mobility picture"> 
                                   </p>
@@ -502,17 +504,6 @@
                                   <h5 class="card-title">ST.Peter Velle TTC, Inc. Automotive Servicing Training</h5>
                                   <p class="card-text"> 
                                     <img class="cardContainer" src="https://ryecode.github.io/portfolio/ImageBank/ryeNC.jpg" alt="Mobility picture"> 
-                                  </p>
-                                </div>
-                              </div>
-                            </div>
-
-                            <div class="col-sm-6" style="width: 100%;">
-                              <div class="certificate">
-                                <div class="card-body">
-                                  <h5 class="card-title">TESDA National Certificate I</h5>
-                                  <p class="card-text"> 
-                                    <img class="cardContainer" src="https://ryecode.github.io/portfolio/ImageBank/ryeNC1.jpg" alt="Mobility picture"> 
                                   </p>
                                 </div>
                               </div>
@@ -554,7 +545,8 @@
   </h1>
 </div>
   <div class="row row-cols-1 row-cols-md-4 g-4"
-       style="text-align: center;">
+       style="text-align: center;
+              margin-bottom: 50px;">
     <div class="col">
       <div class="cards">
         <img class="card-image" 
@@ -568,7 +560,7 @@
                     color: black;
                     font-weight: 900;
                     text-align: center;
-                    margin: 0px 0 0 0;
+                    margin: 0 0 0 0;
                     width: 100%;">
             Rye Portfolio
           </p>
@@ -596,7 +588,7 @@
                     color: black;
                     font-weight: 900;
                     text-align: center;
-                    margin: 0px 0 0 0;
+                    margin: 0 0 0 0;
                     width: 100%;">
             Etiket.com
           </p>
@@ -627,7 +619,7 @@
                     color: black;
                     font-weight: 900;
                     text-align: center;
-                    margin: 0px 0 0 0;
+                    margin: 0 0 0 0;
                     width: 100%;">
                Rye TicTacToe
             </p>
@@ -657,12 +649,12 @@
                     color: black;
                     font-weight: 900;
                     text-align: center;
-                    margin: 0px 0 0 0;
+                    margin: 0 0 0 0;
                     width: 100%;">
-            cvhacker.com
+            cvhack.com
           </p>
             <a class="hover-btn" 
-               href="https://ryetictactoe.vercel.app/" 
+               href="https://ryecode.github.io/portfolio/home" 
                target="_blank">
               Visit Website
             </a>
@@ -728,7 +720,7 @@
                   margin-top: 20px;
                   z-index: 1;">
                     Download the PDF file 
-                    <a href="https://ryecode.github.io/portfolio/ImageBank/ryeResume.pdf"   
+                    <a href="https://ryecode.github.io/portfolio/ImageBank/RyanCorral_Resume.pdf"   
                       target="_blank">here
                     </a>.
         </p>
