attempt to fix moreBtn

--- a/home.html
+++ b/home.html
@@ -122,13 +122,17 @@
               </p>  
             </div>
           </div>
-          <div class="sub">        
-            <a href="#aboutMe"
-               class="neon-button2 btn btn-primary" 
-               id="moreBtn">
-               KNOW MORE ABOUT ME
-            </a>       
+          <div style="z-index: 1;
+                      padding: 5px;">
+            <div class="sub">        
+              <a href="#aboutMe"
+                 class="neon-button2 btn btn-primary" 
+                 id="moreBtn">
+                 KNOW MORE ABOUT ME
+              </a>       
+            </div>
           </div>
+
         </div>
       </div>  
  
@@ -503,7 +507,7 @@
                                 <div class="card-body">
                                   <h5 class="card-title">ST.Peter Velle TTC, Inc. Automotive Servicing Training</h5>
                                   <p class="card-text"> 
-                                    <img class="cardContainer" src="https://ryecode.github.io/portfolio/ImageBank/ryeNC.jpg" alt="Mobility picture"> 
+                                    <img class="cardContainer" src="https://ryecode.github.io/portfolio/ImageBank/ryeNC.jpg" alt="NC picture"> 
                                   </p>
                                 </div>
                               </div>
