mobile view check

--- a/home.html
+++ b/home.html
@@ -126,7 +126,7 @@
                       padding: 5px;">
             <div class="sub">        
               <a href="#aboutMe"
-                 class="neon-button2 btn btn-primary" 
+                 class="neon-button2 btn" 
                  id="moreBtn">
                  KNOW MORE ABOUT ME
               </a>       
