button fix attempt

--- a/home.html
+++ b/home.html
@@ -122,7 +122,7 @@
               </p>  
             </div>
           </div>
-          <div style="z-index: 1;
+          <!-- <div style="z-index: 1;
                       padding: 5px;">
             <div class="sub">        
               <a href="#aboutMe"
@@ -131,21 +131,34 @@
                  KNOW MORE ABOUT ME
               </a>       
             </div>
+          </div> -->
+          <div class="sub">
+            <a href="#aboutMe" id="moreBtn" class="neon-button2" >
+              KNOW MORE ABOUT ME
+            </a>
           </div>
+
 
         </div>
       </div>  
- 
+
       <div class="col-sm-6" 
            style="height: 400px;
                   margin-top: 10px;">
-        <div class="sub">        
+        <!-- <div class="sub">        
           <a href="#myProjects"
              class="neon-button2 btn btn-primary" 
              id="moreBtn1">
               SEE MY PROJECTS HERE
           </a>       
+        </div> -->
+
+        <div class="sub">
+          <a href="#myProjects" id="moreBtn1" class="neon-button2" >
+            SEE MY PROJECTS HERE
+          </a>
         </div>
+
         <div class="card" 
             style="height: 300px; 
                     width: 100%;
@@ -294,10 +307,10 @@
           <h1 class="profileTitle"> 
             MY PROFILE...  
           </h1>        
-        <h3 style="color: black; z-index: 1;">
+        <h3 style="color: black; z-index: 1; ">
             <img id="ryePic" src="https://ryecode.github.io/portfolio/ImageBank/RyeFormal3.png">
           <p class="aboutRye"
-            style=" margin-left: 20px ;
+            style=" margin-left: 35px ;
             margin-right: 20px;
             padding: 50px;
             font-weight: 600;
@@ -307,8 +320,10 @@
             0 0 0.08em hsl(0, 0%, 4%),
             0 0 0.25em rgb(6, 6, 6);
             opacity: 1;
-            width: 97.3%;
-            backdrop-filter: blur(20px);">
+            width: 95%;
+            backdrop-filter: blur(15px);
+            border: 5px hsl(45, 100%, 53%);
+            border-style: ridge;">
                 Greetings I'am Ryan Corral, a former call-center agent, now turned to a Full-Stack Web Developer after recently graduating from KodeGo Full-Stack Web Development Bootcamp, and I was awarded <br>"<a href="https://youtu.be/Hq0qzBNZzQA" target="_blank" style="color: hsl(45, 100%, 53%); z-index: 1;">Best in Coding</a>".  
                 <br><br>
                 Even since high school, I noticed that I can pick-up technology very quickly. I'm very comfortable learning and understanding computers. The first program I coded was using Turbo Pascal (from Jurassic period). Back then, learning to code was hard and very tiring for my classmates, but for me it was so much fun, and fullfilling!
