added marquee element

--- a/home.html
+++ b/home.html
@@ -83,8 +83,7 @@
 
                                         <!-- LANDING / CTA -->  
 <div id="container">
-    <div class="logoSpin" 
-         id="spinner" 
+    <div id="spinner" 
          style="margin-top: 20px;" >
       <img class="loading" 
            src="https://ryecode.github.io/portfolio/ImageBank/RYELogoV2.png" 
@@ -92,8 +91,9 @@
     </div>
 
     <div class="row" 
-         style="margin: 0px 5px 30px 5px;
-                color: black;">
+         style="margin: 0px 5px 0px 5px;
+                color: black;
+                padding-bottom: 0px;">
       <div class="col-sm-6 mb-3 mb-sm-0" 
            style="animation: crashLeft 3s ease-in calc(var(--typewriterSpeed) + 1s) forwards; 
                   animation-iteration-count: initial; 
@@ -117,8 +117,8 @@
                              text-shadow: black;">
                              Tap on the box to read better!
                 </span>
-                <br>
-                Please do check out this website of mine. A humble little space for my personal universe to showcase my creations, skills and achievements. And share with you things that I experienced along the way, as I walk the path to become a full pledged Full-Stack Web Developer. Enjoy!                                   
+                <br>               
+                Hi! I' am Rye, and you just entered the humble space of my personal universe for my creations and achievements. Please do, go ahead and look around... Enjoy!
               </p>  
             </div>
           </div>
@@ -289,12 +289,24 @@
         </div>
       </div>
     </div>
+    
+    <div style="width: 100%;">
+      <marquee direction = "right">
+        <img class="RyeLogoMarqueeRight" 
+        src="https://ryecode.github.io/portfolio/ImageBank/RYELogoBLackSphere.png" 
+        alt="RYE Logo" 
+              style="z-index: 1;
+               height: 100px;
+               width: 100px;
+               margin: 25px;">
+      </marquee>
+    </div>
 
                                         <!-- MY PROFILE -->  
       <div class="cardProfile card" 
            id="aboutMe"
            style="position: relative;     
-           margin: 250px 0px 250px 0px;
+           margin: 40px 0px 50px 0px;
            padding: 0;
            background-image: url('https://ryecode.github.io/portfolio/ImageBank/galaxyBG.png');
            background-size: cover;
@@ -312,7 +324,7 @@
           <p class="aboutRye"
             style=" margin-left: 35px ;
             margin-right: 20px;
-            padding: 50px;
+            padding: 30px;
             font-weight: 600;
             font-size: large;
             color: rgb(255, 255, 255);
@@ -332,7 +344,7 @@
           </p>
         </h3>
         </div>
-          <p style="color: black; margin-top: 15px; width: 80%;">            
+          <p style="color: black; margin-top: 0px; width: 80%;">            
           <!-- ACCORDION -->
           <section class="" style="width: 90%;
                           margin-left: 5%;
@@ -535,6 +547,18 @@
           </section>              
           </p>
       </div>
+
+      <div style="width: 100%;">
+        <marquee direction = "left">
+          <img class="RyeLogoMarqueeLeft" 
+          src="https://ryecode.github.io/portfolio/ImageBank/RYELogoBLackSphere.png" 
+          alt="RYE Logo" 
+                style="z-index: 1;
+                 height: 100px;
+                 width: 100px;
+                 margin: 25px;">
+        </marquee>
+      </div>
       
                                         <!-- MY PROJECTS  -->  
 <div class="cardProfile about" 
@@ -544,7 +568,7 @@
             background-position: center;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            margin-bottom: 250px;">
+            margin-bottom: 50px;">
 <div>
   <h1 class="profileTitle" 
       style="margin-top: 30px;
@@ -675,6 +699,18 @@
       </div>
     </div>
   </div>
+</div>
+
+<div style="width: 100%;">
+  <marquee direction = "right">
+    <img class="RyeLogoMarqueeRight" 
+    src="https://ryecode.github.io/portfolio/ImageBank/RYELogoBLackSphere.png" 
+    alt="RYE Logo" 
+          style="z-index: 1;
+           height: 100px;
+           width: 100px;
+           margin: 25px;">
+  </marquee>
 </div>
 
 
