fixed keyframe bugs

--- a/home.html
+++ b/home.html
@@ -83,7 +83,8 @@
 
                                         <!-- LANDING / CTA -->  
 <div id="container">
-    <div id="spinner" 
+    <div class="logoSpin" 
+         id="spinner" 
          style="margin-top: 20px;" >
       <img class="loading" 
            src="https://ryecode.github.io/portfolio/ImageBank/RYELogoV2.png" 
@@ -92,8 +93,7 @@
 
     <div class="row" 
          style="margin: 0px 5px 0px 5px;
-                color: black;
-                padding-bottom: 0px;">
+                color: black;">
       <div class="col-sm-6 mb-3 mb-sm-0" 
            style="animation: crashLeft 3s ease-in calc(var(--typewriterSpeed) + 1s) forwards; 
                   animation-iteration-count: initial; 
@@ -117,8 +117,8 @@
                              text-shadow: black;">
                              Tap on the box to read better!
                 </span>
-                <br>               
-                Hi! I' am Rye, and you just entered the humble space of my personal universe for my creations and achievements. Please do, go ahead and look around... Enjoy!
+                <br>
+                Please do check out this website of mine. A humble little space for my personal universe to showcase my creations, skills and achievements. And share with you things that I experienced along the way, as I walk the path to become a full pledged Full-Stack Web Developer. Enjoy!                                   
               </p>  
             </div>
           </div>
@@ -289,7 +289,6 @@
         </div>
       </div>
     </div>
-    
     <div style="width: 100%;">
       <marquee direction = "right">
         <img class="RyeLogoMarqueeRight" 
@@ -299,6 +298,7 @@
                height: 100px;
                width: 100px;
                margin: 25px;">
+        </img>
       </marquee>
     </div>
 
@@ -324,7 +324,7 @@
           <p class="aboutRye"
             style=" margin-left: 35px ;
             margin-right: 20px;
-            padding: 30px;
+            padding: 50px;
             font-weight: 600;
             font-size: large;
             color: rgb(255, 255, 255);
@@ -344,7 +344,7 @@
           </p>
         </h3>
         </div>
-          <p style="color: black; margin-top: 0px; width: 80%;">            
+          <p style="color: black; margin-top: 15px; width: 80%;">            
           <!-- ACCORDION -->
           <section class="" style="width: 90%;
                           margin-left: 5%;
@@ -547,16 +547,16 @@
           </section>              
           </p>
       </div>
-
       <div style="width: 100%;">
         <marquee direction = "left">
           <img class="RyeLogoMarqueeLeft" 
-          src="https://ryecode.github.io/portfolio/ImageBank/RYELogoBLackSphere.png" 
-          alt="RYE Logo" 
-                style="z-index: 1;
-                 height: 100px;
-                 width: 100px;
-                 margin: 25px;">
+               src="https://ryecode.github.io/portfolio/ImageBank/RYELogoBLackSphere.png" 
+               alt="RYE Logo" 
+               style="z-index: 1;
+                      height: 100px;
+                      width: 100px;
+                      margin: 25px;">
+          </img>
         </marquee>
       </div>
       
@@ -700,7 +700,6 @@
     </div>
   </div>
 </div>
-
 <div style="width: 100%;">
   <marquee direction = "right">
     <img class="RyeLogoMarqueeRight" 
@@ -710,9 +709,9 @@
            height: 100px;
            width: 100px;
            margin: 25px;">
+    </img>
   </marquee>
 </div>
-
 
                                         <!-- CONTACT ME-->  
   <div class="card about" 
