--- a/home.html
+++ b/home.html
@@ -118,7 +118,7 @@
                              Tap on the box to read better!
                 </span>
                 <br>
-                Please do check out this website of mine. A humble little space for my personal universe to showcase my creations, skills and achievements. And share with you things that I experienced along the way, as I walk the path to become a full pledged Full-Stack Web Developer. Enjoy!                                   
+                Hi! I' am Rye, and you just entered the humble space of my personal universe for my creations and achievements. Please go ahead and take a look around... Enjoy!                                 
               </p>  
             </div>
           </div>
