--- a/home.html
+++ b/home.html
@@ -807,7 +807,9 @@
                   animation-iteration-count: initial;
                   transform: translateX(120%);
                   z-index: 1;
-                  margin-top: 0px;">                  
+                  margin-top: 0px;
+                  border: 5px hsl(45, 100%, 53%);
+            border-style: ridge;">                  
         <img class="cardImage" 
             src="https://ryecode.github.io/portfolio/ImageBank/blueCarbonBG.jpg" 
             alt="background image">  
