Grammar Check and Corrections

--- a/home.html
+++ b/home.html
@@ -336,11 +336,11 @@
             backdrop-filter: blur(15px);
             border: 5px hsl(45, 100%, 53%);
             border-style: ridge;">
-                Greetings I'am Ryan Corral, a former call-center agent, now turned to a Full-Stack Web Developer after recently graduating from KodeGo Full-Stack Web Development Bootcamp, and I was awarded <br>"<a href="https://youtu.be/Hq0qzBNZzQA" target="_blank" style="color: hsl(45, 100%, 53%); z-index: 1;">Best in Coding</a>".  
+                Greetings! I'm Ryan Corral, a former call-center agent based in Antipolo City, Philippines, who has now turned to being a Full-Stack Web Developer after graduating from KodeGo's Full-Stack Web Development Bootcamp. Where I was awarded <br>"<a href="https://youtu.be/Hq0qzBNZzQA" target="_blank" style="color: hsl(45, 100%, 53%); z-index: 1;">Best in Coding</a>".  
                 <br><br>
-                Even since high school, I noticed that I can pick-up technology very quickly. I'm very comfortable learning and understanding computers. The first program I coded was using Turbo Pascal (from Jurassic period). Back then, learning to code was hard and very tiring for my classmates, but for me it was so much fun, and fullfilling!
+                Even since high school, I have noticed that I can pick up technology very quickly. I'm very comfortable learning and understanding computers. The first program I coded was using Turbo Pascal (from the Jurassic period). Back then, learning to code was hard and very tiring for my classmates, but for me, it was so much fun and fulfilling!
                 <br><br>
-                Now that my coding prowess was somewhat updated with the latest programming languages after the bootcamp. I'm hoping, I can get a chance to work for a good IT company where I can showcase my skills and passion for coding. And also expand my knowledge about programming.                
+                Now that my coding prowess has been somewhat updated with the latest programming languages after the bootcamp, I'm hoping I can get a chance to work for a good IT company where I can showcase my skills and passion for coding. And also expand my knowledge about programming.                
           </p>
         </h3>
         </div>
@@ -602,7 +602,7 @@
          Visit Website
        </a>
        <p class="hover-description">
-         This was my first mini-project during our KodeGo bootcamp. It's a single-page website which I built with HTML, Bootstrap v5.3 and CSS. I had to admit this kind of website showed me what I need to improve, and that is content creation! hahaha! I really had a hard time thinking of what to write for my portfolio's contents... LOL~ 
+        This was my first mini-project during our KodeGo bootcamp. It's a single-page website that I built with HTML, Bootstrap v5.3, and CSS. I had to admit that this kind of website showed me what I needed to improve on, and that is content creation! hahaha! I really had a hard time thinking of what to write for my portfolio's contents. &#128517
        </p>
         </div>
       </div>
@@ -630,10 +630,10 @@
               Visit Website
             </a>
             <p class="hover-description">
-              For this project, I created the whole backend, the database implementation, and deployment of the website.
+              For this project, I created the whole backend, the database implementation, and the deployment of the website.
             <br> 
             <br>
-              This is our collaboration capstone project of Team IceCode during KodeGo bootcamp. It was built using React, Node, Express, MongoDB, Mongoose, some Bootstrap v5.3, React Bootstrap v2.9.0 and old fashioned CSS. Then it was deployed using Vercel. 
+            This is our collaboration capstone project for Team IceCode during KodeGo bootcamp. It was built using React, Node, Express, MongoDB, Mongoose, some Bootstrap v5.3, React Bootstrap v2.9.0, and old-fashioned CSS. Then it was deployed using Vercel. 
             </p>
         </div>
       </div>
@@ -661,7 +661,7 @@
               Visit Website
             </a>
             <p class="hover-description">
-              This is a mini game I created for my KodeGo technical exam. I built it purely with React and JavaScript. Then I deployed it using Vercel. I'm just very fond of this one because I figured out on my own most parts of the logic needed for it to work properly. And I'm planning to level up this game with more css effects, animations, and more functionality. 
+              This is a minigame I created for my KodeGo technical exam. I built it purely with React and JavaScript. Then I deployed it using Vercel. I'm just very fond of this one because I figured out on my own most of the logic needed for it to work properly. And I'm planning to level up this game with more CSS effects, animations, and functionality.
             </p>
         </div>
       </div>
@@ -691,9 +691,9 @@
               Visit Website
             </a>
             <p class="hover-description">
-              This is my second mini-project during the KodeGo  bootcamp. Unfortunately the github for this website was ruined and I decided to recreate a more advance version of it using React.
+              This is my second mini-project during the KodeGo bootcamp. Unfortunately, the github for this website was ruined, and I decided to recreate a more advanced version of it using React.
             <br>
-              I'm currently reconstructing and migrating this website so stay tuned for the relaunching of this website soon!
+            I'm currently reconstructing and migrating this website, so stay tuned for the relaunch of this website soon!
             </p>
         </div>
       </div>
