--- a/home.html
+++ b/home.html
@@ -686,7 +686,7 @@
             cvhack.com
           </p>
             <a class="hover-btn" 
-               href="https://ryecode.github.io/portfolio/home" 
+               href="https://ryeportfolio.vercel.app/home.html" 
                target="_blank">
               Visit Website
             </a>
